Add project workflow tools